# EV-Energy-Optimization

./: .gitignore  EXPLORATION_README.md  PROJECT_EXPLANATION.md  README.md  explore_visualize_data.py  monitor_training.py  pyproject.toml  quick_analysis.py  quick_train.sh
DM-EVRP/: run.py  trainer.py
DM-EVRP/BaselineAlgorithms/: ACO.py  ALNS.py  Gurobi.py
DM-EVRP/ExperimentalData/test_data/20/: 10_seed12345.pkl  256_seed12345.pkl  3_seed12345.pkl  5_seed12345.pkl
DM-EVRP/nets/: DRLModel.py
DM-EVRP/problems/: EVRP.py
DM-EVRP/utils/: plot_delivery_graph.py  reinforce_baselines.py
Docs/: Bibliography.txt
EM-EVRP/: README.md  infer_from_npz.py  plot_rewad.py  run.py  run_em_training.ps1  trainer.py
EM-EVRP/BaselineAlgorithms/: ACO.py  ALNS.py  Gurobi.py
EM-EVRP/nets/: DRLModel.py
EM-EVRP/problems/: EVRP.py
EM-EVRP/utils/: plot_delivery_graph.py  reinforce_baselines.py
Graph_Generation/src/: RL_Testing.ipynb  RL_second_test.ipynb  RL_third_test.py  Simple_testing.ipynb  network_gen.py  test_single_box.ipynb
Internhip_Project/Graph_Generation/src/: README_POI_TO_EVRP.md  build_poi_em_evrp_npz.py  network_gen.py
Internhip_Project/graph_extraction/: README.md  build_poi_graph.py  dijkstra.py  export_em_evrp_npz.py  loaders.py
RL4AMOD_Inspiration/: agent.py  ev_routing_env.py  graph_parser.py  models.py  network_gen_wrapper.py  static_embedding.py  test.md  train_ev.py
RL4AMOD_Inspiration/config/: config.yaml
RL4AMOD_Inspiration/config/agent/: dqn_gnn.yaml
RL4AMOD_Inspiration/config/environment/: ev_routing.yaml
data/: EV_Energy_Consumption_Dataset.csv
notebook/: New_York_Map_gen.ipynb  New_Yrok_Map_gen.ipynb  test.ipynb  testing_data.ipynb
src/CONFIG/: energy_features.py
src/energy_estimation/: .gitignore  __init__.py
src/energy_estimation/analysis/: __init__.py  performance_analyzer.py  run_analysis.py  visualization.py
src/energy_estimation/analysis/results/: analysis_report.csv
src/energy_estimation/config/: __init__.py  model_configs.py  training_config.py
src/energy_estimation/data_loader/: __init__.py  dataset_loader.py
src/energy_estimation/data_utils/: __init__.py  preprocessor.py  validators.py
src/energy_estimation/models/: __init__.py  base_model.py  catboost_model.py  lightgbm_model.py  stacking_model.py  xgboost_model.py
src/energy_estimation/saved_models/catboost_experiment/: CatBoost_20251031_235956.pkl  CatBoost_20251031_235956_metadata.json  CatBoost_20251101_000057.pkl  CatBoost_20251101_000057_metadata.json  CatBoost_20251101_000408.pkl  CatBoost_20251101_000408_metadata.json  best_model_catboost_predictions.csv  summary.txt  training_history.json
src/energy_estimation/saved_models/demo_experiment/: RandomForest_Demo_20251031_234632.pkl  RandomForest_Demo_20251031_234632_metadata.json  summary.txt  test_predictions.csv  training_history.json
src/energy_estimation/saved_models/lightgbm_experiment/: LightGBM_20251031_235955_metadata.json  summary.txt  (+4 more)
src/energy_estimation/trainer/: __init__.py  trainer.py  utils.py
src/optimization/: simulated_annealing.py  tsp.cpp
(+34 files in other folders)
